--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,114 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    background-color: #1f1f1f;
+    margin: 0;
+    font-family: Arial, sans-serif;
+  }
+  
+  .mat-paginator {
+    margin-top: 20px;
+    background-color: #ffbf00; /* Fondo amarillo para el paginador */
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 10px;
+    color: #000000; /* Color negro para el texto del paginador */
+  }
+  
+  h1, h2, h3, h4, h5, h6 {
+    color: #ffffff;
+    font-weight: 700;
+    margin-top: 0;
+  }
+  
+  p {
+    line-height: 1.6;
+    margin-bottom: 20px;
+    color: #dddddd; /* Color gris claro para los párrafos */
+  }
+  
+  a {
+    color: #ffbf00; /* Enlaces en color amarillo */
+    text-decoration: none;
+    border-bottom: 2px solid transparent;
+    transition: all 0.3s ease;
+  }
+  
+  a:hover {
+    border-bottom: 2px solid #ffbf00; /* Sutil efecto hover en enlaces */
+  }
+  
+  button, .btn {
+    background-color: #ff6f00;
+    color: #000000;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+  }
+  
+  button:hover, .btn:hover {
+    background-color: #e58900; 
+    transform: translateY(-2px); 
+  }
+  
+  button:active, .btn:active {
+    transform: translateY(0); /* Restablecer en click */
+  }
+  
+  input, textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #444444;
+    border-radius: 5px;
+    background-color: #333333;
+    color: #ffffff;
+  }
+  
+  input:focus, textarea:focus {
+    outline: none;
+    border-color: #ffbf00;
+  }
+  
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+  }
+  
+  table, th, td {
+    border: 1px solid #444444;
+  }
+  
+  th, td {
+    padding: 10px;
+    text-align: left;
+  }
+  
+  th {
+    background-color: #ffbf00;
+    color: #000000;
+  }
+  
+  td {
+    background-color: #2c2c2c;
+  }
+  
+  footer {
+    background-color: #333333;
+    color: #ffffff;
+    text-align: center;
+    padding: 20px 0;
+    margin-top: 40px;
+    border-top: 3px solid #ffbf00;
+  }
+  
+  footer a {
+    color: #ffbf00;
+  }
+  
+  footer a:hover {
+    text-decoration: underline;
+  }
+  
